grafana-svc-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-lb
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: grafana
