grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: grafana
