influxdb-svc-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8083
    protocol: TCP
    name: webui
  - port: 8086
    targetPort: 8086
    protocol: TCP
    name: httpep
  selector:
    app: influxdb
