rethinkdb-svc-internal.yml
apiVersion: v1
kind: Service
metadata:
  name: rethinkdb-internal
  namespace: default
spec:
  ports:
  - port: 28015
  selector:
    app: rethinkdb
