rethinkdb-svc-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: rethinkdb-lb
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: rethinkdb
