rethinkdb-svc-oauth2.yml
apiVersion: v1
kind: Service
metadata:
  name: rethinkdb
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 4180
    protocol: TCP
  selector:
    app: rethinkdb
