rethinkdb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rethinkdb
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: rethinkdb
