wwwapp-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: wwwapp
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: wwwapp
