ingress-notls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubestaticip
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
spec:
  rules:
  # - host: coolnamegcp.tk
  #   http:
  #     paths:
  #     - path: /*
  #       backend:
  #         serviceName: nginx
  #         servicePort: 80
  - host: www.coolnamegcp.tk
    http:
      paths:
      - path: /*
        backend:
          serviceName: wwwapp
          servicePort: 80
  # - host: cockroachdb.coolnamegcp.tk
  #   http:
  #     paths:
  #     - path: /*
  #       backend:
  #         serviceName: cockroachdb
  #         servicePort: 80
  - host: git.coolnamegcp.tk
    http:
      paths:
      - path: /*
        backend:
          serviceName: gitea
          servicePort: 80
  - host: rethinkdb.coolnamegcp.tk
    http:
      paths:
      - path: /*
        backend:
          serviceName: rethinkdb
          servicePort: 80
